Visual bugs: images overlapping, minor  other improvements

--- a/Forum/static/css/style.css
+++ b/Forum/static/css/style.css
@@ -4,6 +4,23 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-1-col-portfolio/blob/master/LICENSE)
  */
 
+.portfolio-item {
+    padding: 15px;
+}
+
+.my-4 {
+    padding: 5px!important;
+    margin: 5px!important;
+}
+
+.categories {
+    max-width: 70%;
+}
+
+.my-4 {
+    padding: 50px;
+}
+
 .navbar {
     background-color: #666666!important;
 }
@@ -16,11 +33,12 @@ h1 {
 
 .img-responsive {
     height: 150px;
+    max-width: 90%;
     object-fit: cover;
 }
 
 body {
-    background-color: #00e6b8;
+    background-color: #95edcf;
     padding-top: 54px;
 }
 
@@ -247,7 +265,12 @@ footer {
     padding: 3px;
     position: fixed;
     bottom: 0;
+    left: 15%;
     width: 80%;
+}
+
+.chat button {
+    width: 9%!important;
 }
 
 form input {
@@ -259,7 +282,7 @@ form input {
 
 form button {
     width: 90%;
-    background: rgb(130, 224, 255);
+    background: #34ed96;
     border: none;
     padding: 10px;
 }
@@ -273,6 +296,7 @@ form button {
     padding: 30px;
     bottom: 30px;
     overflow: auto;
+    left: 15%;
 }
 
 #messages li {
